--- a/GFMUI/index-2.html
+++ b/GFMUI/index-2.html
@@ -93,100 +93,110 @@
     </div>
     <div id="Games" class="card-container">
         <!-- Kart 1 -->
-        <div class="card" onclick="toggleCardSelection(this)">
-            <div class="card__content">
-                <img src="images/Cyberpunk_2077_box_art.jpg" alt="">
-                <div class="game-Info">
-                    <h2 class="gameInfo">Cyberpunk 2077</h2>
-                    <p class="gameInfo">Highly anticipated open-world role-playing game</p>
-                    <div class="price">$44.99</div>
-                </div>
-                <a class="round-button">⭐</a>
-            </div>
+        <!-- Kart 1 -->
+<div class="card" onclick="toggleCardSelection(this)">
+    <div class="card__content">
+        <img src="images/Cyberpunk_2077_box_art.jpg" alt="Cyberpunk 2077">
+        <div class="game-Info">
+            <h2 class="gameInfo">Cyberpunk 2077</h2>
+            <p class="gameInfo">Highly anticipated open-world role-playing game set in a dystopian future.</p>
+            <div class="price">$44.99</div>
         </div>
-        
-        <!-- Kart 2 -->
-        <div class="card" onclick="toggleCardSelection(this)">
-            <div class="card__content">
-                <img src="images/Grand_Theft_Auto_V.png" alt="">
-                <div class="game-Info">
-                    <h2 class="gameInfo">Grand Theft Auto 5</h2>
-                    <p class="gameInfo">Description of the second game</p>
-                    <div class="price">$39.99</div>
-                </div>
-                <a class="round-button">⭐</a>
-            </div>
-        </div>
+        <a class="round-button">⭐</a>
+    </div>
+</div>
 
-        <!-- Kart 3 -->
-        <div class="card" onclick="toggleCardSelection(this)">
-            <div class="card__content">
-                <img src="images/spiderman.jpeg" alt="">
-                <div class="game-Info">
-                    <h2 class="gameInfo">Marvel's Spiderman Remastered</h2>
-                    <p class="gameInfo">Description of the third game</p>
-                    <div class="price">$29.99</div>
-                </div>
-                <a class="round-button">⭐</a>
-            </div>
+<!-- Kart 2 -->
+<div class="card" onclick="toggleCardSelection(this)">
+    <div class="card__content">
+        <img src="images/Grand_Theft_Auto_V.png" alt="Grand Theft Auto 5">
+        <div class="game-Info">
+            <h2 class="gameInfo">Grand Theft Auto 5</h2>
+            <p class="gameInfo">Action-packed open-world game with an immersive storyline and dynamic gameplay.</p>
+            <div class="price">$39.99</div>
         </div>
+        <a class="round-button">⭐</a>
+    </div>
+</div>
 
+<!-- Kart 3 -->
+<div class="card" onclick="toggleCardSelection(this)">
+    <div class="card__content">
+        <img src="images/spiderman.jpeg" alt="Marvel's Spiderman Remastered">
+        <div class="game-Info">
+            <h2 class="gameInfo">Marvel's Spiderman Remastered</h2>
+            <p class="gameInfo">Swing through the city as Spider-Man in this enhanced and remastered version of the classic game.</p>
+            <div class="price">$29.99</div>
+        </div>
+        <a class="round-button">⭐</a>
+    </div>
+</div>
 
-        <div class="card" onclick="toggleCardSelection(this)">
-            <div class="card__content">
-                <img src="images/god_of_War.jpeg" alt="">
-                <div class="game-Info">
-                    <h2 class="gameInfo">God of War</h2>
-                    <p class="gameInfo">Highly anticipated open-world role-playing game</p>
-                    <div class="price">$44.99</div>
-                </div>
-                <a class="round-button">⭐</a>
-            </div>
+<!-- Kart 4 -->
+<div class="card" onclick="toggleCardSelection(this)">
+    <div class="card__content">
+        <img src="images/god_of_War.jpeg" alt="God of War">
+        <div class="game-Info">
+            <h2 class="gameInfo">God of War</h2>
+            <p class="gameInfo">Embark on an epic journey with Kratos in this action-packed adventure filled with gods and monsters.</p>
+            <div class="price">$44.99</div>
         </div>
-        <div class="card" onclick="toggleCardSelection(this)">
-            <div class="card__content">
-                <img src="images/fifa.jpg" alt="">
-                <div class="game-Info">
-                    <h2 class="gameInfo">Fifa 23</h2>
-                    <p class="gameInfo">Highly anticipated open-world role-playing game</p>
-                    <div class="price">$44.99</div>
-                </div>
-                <a class="round-button">⭐</a>
-            </div>
+        <a class="round-button">⭐</a>
+    </div>
+</div>
+
+<!-- Kart 5 -->
+<div class="card" onclick="toggleCardSelection(this)">
+    <div class="card__content">
+        <img src="images/fifa.jpg" alt="Fifa 23">
+        <div class="game-Info">
+            <h2 class="gameInfo">Fifa 23</h2>
+            <p class="gameInfo">Experience the excitement of football with realistic gameplay and stunning graphics in the latest FIFA installment.</p>
+            <div class="price">$44.99</div>
         </div>
-        <div class="card" onclick="toggleCardSelection(this)">
-            <div class="card__content">
-                <img src="images/fortnite image.jpeg" alt="">
-                <div class="game-Info">
-                    <h2 class="gameInfo">Fortnite</h2>
-                    <p class="gameInfo">Highly anticipated open-world role-playing game</p>
-                    <div class="price">$44.99</div>
-                </div>
-                <a class="round-button">⭐</a>
-            </div>
+        <a class="round-button">⭐</a>
+    </div>
+</div>
+
+<!-- Kart 6 -->
+<div class="card" onclick="toggleCardSelection(this)">
+    <div class="card__content">
+        <img src="images/fortnite image.jpeg" alt="Fortnite">
+        <div class="game-Info">
+            <h2 class="gameInfo">Fortnite</h2>
+            <p class="gameInfo">Join the battle, build structures, and outlast your opponents in this popular battle royale game.</p>
+            <div class="price">$44.99</div>
         </div>
-        <div class="card" onclick="toggleCardSelection(this)">
-            <div class="card__content">
-                <img src="images/Valorant.jpeg" alt="">
-                <div class="game-Info">
-                    <h2 class="gameInfo">Valorant</h2>
-                    <p class="gameInfo">Highly anticipated open-world role-playing game</p>
-                    <div class="price">$44.99</div>
-                </div>
-                <a class="round-button">⭐</a>
-            </div>
+        <a class="round-button">⭐</a>
+    </div>
+</div>
+
+<!-- Kart 7 -->
+<div class="card" onclick="toggleCardSelection(this)">
+    <div class="card__content">
+        <img src="images/Valorant.jpeg" alt="Valorant">
+        <div class="game-Info">
+            <h2 class="gameInfo">Valorant</h2>
+            <p class="gameInfo">Engage in tactical shooter gameplay with unique characters and abilities in this competitive FPS.</p>
+            <div class="price">$44.99</div>
         </div>
-        <div class="card" onclick="toggleCardSelection(this)">
-            <div class="card__content">
-                <img src="images/hogwarts_legacy.jpeg" alt="">
-                <div class="game-Info">
-                    <h2 class="gameInfo">Hogwarts Legacy</h2>
-                    <p class="gameInfo">Highly anticipated open-world role-playing game</p>
-                    <div class="price">$44.99</div>
-                </div>
-                <a class="round-button">⭐</a>
-            </div>
+        <a class="round-button">⭐</a>
+    </div>
+</div>
+
+<!-- Kart 8 -->
+<div class="card" onclick="toggleCardSelection(this)">
+    <div class="card__content">
+        <img src="images/hogwarts_legacy.jpeg" alt="Hogwarts Legacy">
+        <div class="game-Info">
+            <h2 class="gameInfo">Hogwarts Legacy</h2>
+            <p class="gameInfo">Immerse yourself in the magical world of Harry Potter with this upcoming open-world RPG set in the wizarding universe.</p>
+            <div class="price">$44.99</div>
         </div>
+        <a class="round-button">⭐</a>
+    </div>
+</div>
+
 
         <div class="card" onclick="toggleCardSelection(this)">
             <div class="card__content">
