--- a/GFMUI/index-2.html
+++ b/GFMUI/index-2.html
@@ -139,7 +139,7 @@
         <div class="game-Info">
             <h2 class="gameInfo">God of War</h2>
             <p class="gameInfo">Embark on an epic journey with Kratos in this action-packed adventure filled with gods and monsters.</p>
-            <div class="price">$44.99</div>
+            <div class="price">$49.99</div>
         </div>
         <a class="round-button">⭐</a>
     </div>
@@ -152,7 +152,7 @@
         <div class="game-Info">
             <h2 class="gameInfo">Fifa 23</h2>
             <p class="gameInfo">Experience the excitement of football with realistic gameplay and stunning graphics in the latest FIFA installment.</p>
-            <div class="price">$44.99</div>
+            <div class="price">$69.99</div>
         </div>
         <a class="round-button">⭐</a>
     </div>
@@ -165,7 +165,7 @@
         <div class="game-Info">
             <h2 class="gameInfo">Fortnite</h2>
             <p class="gameInfo">Join the battle, build structures, and outlast your opponents in this popular battle royale game.</p>
-            <div class="price">$44.99</div>
+            <div class="price">Free</div>
         </div>
         <a class="round-button">⭐</a>
     </div>
@@ -178,7 +178,7 @@
         <div class="game-Info">
             <h2 class="gameInfo">Valorant</h2>
             <p class="gameInfo">Engage in tactical shooter gameplay with unique characters and abilities in this competitive FPS.</p>
-            <div class="price">$44.99</div>
+            <div class="price">Free</div>
         </div>
         <a class="round-button">⭐</a>
     </div>
@@ -191,7 +191,7 @@
         <div class="game-Info">
             <h2 class="gameInfo">Hogwarts Legacy</h2>
             <p class="gameInfo">Immerse yourself in the magical world of Harry Potter with this upcoming open-world RPG set in the wizarding universe.</p>
-            <div class="price">$44.99</div>
+            <div class="price">$59.99</div>
         </div>
         <a class="round-button">⭐</a>
     </div>
@@ -200,11 +200,11 @@
 
         <div class="card" onclick="toggleCardSelection(this)">
             <div class="card__content">
-                <img src="images/Cyberpunk_2077_box_art.jpg" alt="">
+                <img src="images/palworld_xwr4.jpg" alt="">
                 <div class="game-Info">
-                    <h2 class="gameInfo">Cyberpunk 2077</h2>
-                    <p class="gameInfo">Highly anticipated open-world role-playing game</p>
-                    <div class="price">$44.99</div>
+                    <h2 class="gameInfo">Palworld</h2>
+                    <p class="gameInfo">Explore the enchanting world of Palworld, an open-world RPG where you befriend mystical creatures called Pals. Build your haven, embark on adventures, and nurture your Pal companions.</p>
+                    <div class="price">$14.99</div>
                 </div>
                 <a class="round-button">⭐</a>
             </div>
